cargo-workspaces/tests/snapshots/init__no_path.snap
---
source: tests/init.rs
expression: err
---
error: unable to initialize workspace: no folder at 'new'

