cargo-workspaces/tests/snapshots/init__normal.snap
---
source: tests/init.rs
assertion_line: 26
expression: err
---
info crates dep1, dep2, top
info initialized .

