cargo-workspaces/tests/snapshots/init__normal_with_manifest-2.snap
---
source: tests/init.rs
assertion_line: 41
expression: data
---
[workspace]
members = [
	"top",
	"dep1",
	"dep2",
]
