cargo-workspaces/tests/snapshots/init__normal_with_no_manifest-2.snap
---
source: tests/init.rs
expression: manifest
---
[workspace]
members = [
    "dep1",
    "dep2",
    "top",
]
