cargo-workspaces/tests/snapshots/init__root_with_manifest_no_workspace-2.snap
---
source: tests/init.rs
assertion_line: 97
expression: data
---
[package]
name = "root"
version = "0.1.0"
authors = ["Pavan Kumar Sunkara <pavan.sss1991@gmail.com>"]
edition = "2018"

[[bin]]
name = "root"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "",
    "dep1",
    "dep2",
    "top",
]
