cargo-workspaces/tests/snapshots/init__root_with_manifest_no_workspace.snap
---
source: tests/init.rs
assertion_line: 248
expression: err
---
info crates , dep1, dep2, top
info initialized .
