cargo-workspaces/tests/snapshots/init__with_manifest.snap
---
source: tests/init.rs
expression: err
---
error: unable to initialize workspace: 'Cargo.toml' exists

